--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+a2wsgi==1.10.8
+anyio==4.8.0
+asgiref==3.8.1
 attrs==25.1.0
 bandit==1.8.3
 black==25.1.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
+connexion==3.2.0
 flake8==7.1.2
 flake8-bandit==4.1.1
 flake8-bugbear==24.12.12
@@ -13,8 +20,19 @@ flake8-plugin-utils==1.3.3
 flake8-pytest-style==2.1.0
 flake8-quotes==3.4.0
 flake8-unused-arguments==0.0.13
+Flask==3.1.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+inflection==0.5.1
 isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 mypy-extensions==1.0.0
@@ -26,7 +44,17 @@ platformdirs==4.3.6
 pycodestyle==2.12.1
 pyflakes==3.2.0
 Pygments==2.19.1
+python-multipart==0.0.20
 PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
 rich==13.9.4
+rpds-py==0.23.1
 setuptools==75.9.1
+sniffio==1.3.1
+starlette==0.46.1
 stevedore==5.4.1
+swagger_ui_bundle==1.1.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
